--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="72fe87">  <td>24/05/07 16:44:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateEmployeeDatailsTest.setUp()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@327bcebd]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@56861999</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/07 16:44:11</td>   <td>7521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEmployeeDatailsTest.VarifyNewEmployeeDetailsCreation()[pri:1, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@327bcebd]">VarifyNewEmployeeDetailsCreation</td> 
-  <td>main@56861999</td>   <td></td> </tr>
-<tr bgcolor="72fe87">  <td>24/05/07 16:44:23</td>   <td>19477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CreateEmployeeDatailsTest.tearDown()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@327bcebd]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@56861999</td>   <td></td> </tr>
+<tr bgcolor="8d6d84">  <td>24/05/08 12:29:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateEmployeeDatailsTest.setUp()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@338c99c8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1537772520</td>   <td></td> </tr>
+<tr bgcolor="8d6d84">  <td>24/05/08 12:30:02</td>   <td>6345</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEmployeeDatailsTest.VarifyNewEmployeeDetailsCreation(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@338c99c8]">VarifyNewEmployeeDetailsCreation</td> 
+  <td>main@1537772520</td>   <td></td> </tr>
+<tr bgcolor="8d6d84">  <td>24/05/08 12:30:14</td>   <td>18360</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CreateEmployeeDatailsTest.tearDown()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@338c99c8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1537772520</td>   <td></td> </tr>
+<tr bgcolor="8d6d84">  <td>24/05/08 12:30:16</td>   <td>19566</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateEmployeeDatailsTest.setUp()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@338c99c8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1537772520</td>   <td></td> </tr>
+<tr bgcolor="8d6d84">  <td>24/05/08 12:30:21</td>   <td>25034</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEmployeeDatailsTest.VarifyNewEmployeeDetailsCreation(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@338c99c8]">VarifyNewEmployeeDetailsCreation</td> 
+  <td>main@1537772520</td>   <td></td> </tr>
+<tr bgcolor="8d6d84">  <td>24/05/08 12:30:35</td>   <td>39102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CreateEmployeeDatailsTest.tearDown()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@338c99c8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1537772520</td>   <td></td> </tr>
+<tr bgcolor="8d6d84">  <td>24/05/08 12:30:35</td>   <td>39422</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateEmployeeDatailsTest.setUp()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@338c99c8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1537772520</td>   <td></td> </tr>
+<tr bgcolor="8d6d84">  <td>24/05/08 12:30:43</td>   <td>46647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEmployeeDatailsTest.VarifyNewEmployeeDetailsCreation(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@338c99c8]">VarifyNewEmployeeDetailsCreation</td> 
+  <td>main@1537772520</td>   <td></td> </tr>
+<tr bgcolor="8d6d84">  <td>24/05/08 12:30:56</td>   <td>59608</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CreateEmployeeDatailsTest.tearDown()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@338c99c8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1537772520</td>   <td></td> </tr>
+<tr bgcolor="8d6d84">  <td>24/05/08 12:30:56</td>   <td>59957</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateEmployeeDatailsTest.setUp()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@338c99c8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1537772520</td>   <td></td> </tr>
+<tr bgcolor="8d6d84">  <td>24/05/08 12:31:02</td>   <td>65648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEmployeeDatailsTest.VarifyNewEmployeeDetailsCreation(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@338c99c8]">VarifyNewEmployeeDetailsCreation</td> 
+  <td>main@1537772520</td>   <td></td> </tr>
+<tr bgcolor="8d6d84">  <td>24/05/08 12:31:15</td>   <td>78883</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CreateEmployeeDatailsTest.tearDown()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@338c99c8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1537772520</td>   <td></td> </tr>
 </table>
