--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,4 +1,8 @@
-<h2>Reporter output</h2><table><tr><td>click on employee tab working successfully</td></tr>
-<tr><td>click on More tab working successfully</td></tr>
+<h2>Reporter output</h2><table><tr><td>click on employee tab and more tab working successfully</td></tr>
+<tr><td>Employee info successfully saved</td></tr>
+<tr><td>click on employee tab and more tab working successfully</td></tr>
+<tr><td>Employee info successfully saved</td></tr>
+<tr><td>click on employee tab and more tab working successfully</td></tr>
+<tr><td>click on employee tab and more tab working successfully</td></tr>
 <tr><td>Employee info successfully saved</td></tr>
 </table>
