--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,28 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8d6d84">  <td>24/05/08 13:58:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEmployeeDatailsTest.VarifyNewEmployeeDetailsCreation(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@62010f5c]">VarifyNewEmployeeDetailsCreation</td> 
-  <td>main@858232531</td>   <td></td> </tr>
-<tr bgcolor="8d6d84">  <td>24/05/08 13:58:53</td>   <td>15706</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEmployeeDatailsTest.VarifyNewEmployeeDetailsCreation(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@62010f5c]">VarifyNewEmployeeDetailsCreation</td> 
-  <td>main@858232531</td>   <td></td> </tr>
-<tr bgcolor="8d6d84">  <td>24/05/08 13:59:07</td>   <td>29949</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEmployeeDatailsTest.VarifyNewEmployeeDetailsCreation(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@62010f5c]">VarifyNewEmployeeDetailsCreation</td> 
-  <td>main@858232531</td>   <td></td> </tr>
-<tr bgcolor="8d6d84">  <td>24/05/08 13:59:21</td>   <td>44261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateEmployeeDatailsTest.VarifyNewEmployeeDetailsCreation(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@62010f5c]">VarifyNewEmployeeDetailsCreation</td> 
-  <td>main@858232531</td>   <td></td> </tr>
-<tr bgcolor="8d6d84">  <td>24/05/08 13:58:26</td>   <td>-11392</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateEmployeeDatailsTest.setUp()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@62010f5c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@858232531</td>   <td></td> </tr>
-<tr bgcolor="8d6d84">  <td>24/05/08 13:58:49</td>   <td>12033</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateEmployeeDatailsTest.setUp()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@62010f5c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@858232531</td>   <td></td> </tr>
-<tr bgcolor="8d6d84">  <td>24/05/08 13:59:03</td>   <td>26255</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateEmployeeDatailsTest.setUp()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@62010f5c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@858232531</td>   <td></td> </tr>
-<tr bgcolor="8d6d84">  <td>24/05/08 13:59:18</td>   <td>40605</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CreateEmployeeDatailsTest.setUp()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@62010f5c]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@858232531</td>   <td></td> </tr>
-<tr bgcolor="8d6d84">  <td>24/05/08 13:58:49</td>   <td>11682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CreateEmployeeDatailsTest.tearDown()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@62010f5c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@858232531</td>   <td></td> </tr>
-<tr bgcolor="8d6d84">  <td>24/05/08 13:59:03</td>   <td>25992</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CreateEmployeeDatailsTest.tearDown()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@62010f5c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@858232531</td>   <td></td> </tr>
-<tr bgcolor="8d6d84">  <td>24/05/08 13:59:17</td>   <td>40365</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CreateEmployeeDatailsTest.tearDown()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@62010f5c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@858232531</td>   <td></td> </tr>
-<tr bgcolor="8d6d84">  <td>24/05/08 13:59:32</td>   <td>54577</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CreateEmployeeDatailsTest.tearDown()[pri:0, instance:com.jala.qa.testcases.CreateEmployeeDatailsTest@62010f5c]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@858232531</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/09 13:24:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitle()[pri:2, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">loginPageTitle</td> 
+  <td>main@896072146</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/09 13:24:56</td>   <td>3885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageVisibletext()[pri:3, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">loginPageVisibletext</td> 
+  <td>main@896072146</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/09 13:24:49</td>   <td>-3851</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.logintext()[pri:1, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">logintext</td> 
+  <td>main@896072146</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/09 13:24:43</td>   <td>-9763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@896072146</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/09 13:24:49</td>   <td>-3553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@896072146</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/09 13:24:53</td>   <td>367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@896072146</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/09 13:24:49</td>   <td>-3756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@896072146</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/09 13:24:52</td>   <td>85</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@896072146</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/09 13:24:56</td>   <td>3950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@896072146</td>   <td></td> </tr>
 </table>
