--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,9 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>click on employee tab and more tab working successfully</td></tr>
-<tr><td>Employee info successfully saved</td></tr>
-<tr><td>click on employee tab and more tab working successfully</td></tr>
-<tr><td>Employee info successfully saved</td></tr>
-<tr><td>click on employee tab and more tab working successfully</td></tr>
-<tr><td>Employee info successfully saved</td></tr>
-<tr><td>click on employee tab and more tab working successfully</td></tr>
-<tr><td>Employee info successfully saved</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
