--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="eccb8e">  <td>24/05/09 13:24:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageTitle()[pri:2, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">loginPageTitle</td> 
-  <td>main@896072146</td>   <td></td> </tr>
-<tr bgcolor="eccb8e">  <td>24/05/09 13:24:56</td>   <td>3885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginPageVisibletext()[pri:3, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">loginPageVisibletext</td> 
-  <td>main@896072146</td>   <td></td> </tr>
-<tr bgcolor="eccb8e">  <td>24/05/09 13:24:49</td>   <td>-3851</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.logintext()[pri:1, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">logintext</td> 
-  <td>main@896072146</td>   <td></td> </tr>
-<tr bgcolor="eccb8e">  <td>24/05/09 13:24:43</td>   <td>-9763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@896072146</td>   <td></td> </tr>
-<tr bgcolor="eccb8e">  <td>24/05/09 13:24:49</td>   <td>-3553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@896072146</td>   <td></td> </tr>
-<tr bgcolor="eccb8e">  <td>24/05/09 13:24:53</td>   <td>367</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setup()[pri:0, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@896072146</td>   <td></td> </tr>
-<tr bgcolor="eccb8e">  <td>24/05/09 13:24:49</td>   <td>-3756</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@896072146</td>   <td></td> </tr>
-<tr bgcolor="eccb8e">  <td>24/05/09 13:24:52</td>   <td>85</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@896072146</td>   <td></td> </tr>
-<tr bgcolor="eccb8e">  <td>24/05/09 13:24:56</td>   <td>3950</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.jala.qa.testcases.LoginPageTest@29a0cdb]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@896072146</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/09 14:48:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MultilpleTabsTest.getTitleOfMultileTabPage()[pri:0, instance:com.jala.qa.testcases.MultilpleTabsTest@524f3b3a]">getTitleOfMultileTabPage</td> 
+  <td>main@1808432653</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/09 14:48:06</td>   <td>-8333</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MultilpleTabsTest.setUp()[pri:0, instance:com.jala.qa.testcases.MultilpleTabsTest@524f3b3a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1808432653</td>   <td></td> </tr>
+<tr bgcolor="eccb8e">  <td>24/05/09 14:48:14</td>   <td>28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MultilpleTabsTest.tearDown()[pri:0, instance:com.jala.qa.testcases.MultilpleTabsTest@524f3b3a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1808432653</td>   <td></td> </tr>
 </table>
